--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -7,7 +7,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-    <h3><%= skill.skill %></h3>
+    <h3><%= skills.skill %></h3>
     <h3><%= Level: <%= skill.level%> %></h3>
     
 </body>
