--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3><%= skills.skill %></h3>
-    <h3><%= Level: <%= skill.level%> %></h3>
+    <h3>Level: <%= skill.level%></h3>
     
 </body>
 </html>
